--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,12 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/btn_show_calendar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Show Calendar" />
+
     <Spinner
         android:id="@+id/spinnerCountry"
         android:layout_width="match_parent"
@@ -21,15 +27,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:minHeight="48dp"
-        android:layout_marginBottom="20dp" />
+        android:minHeight="48dp" />
     <DatePicker
         android:id="@+id/datePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:calendarViewShown="false"
-        android:datePickerMode="calendar"
-        android:layout_marginBottom="10dp" />
+        android:datePickerMode="calendar" />
     <TimePicker
         android:id="@+id/timePicker"
         android:timePickerMode="spinner"
